test/libsolidity/syntaxTests/metaTypes/typeNotRegularIdentifierContractName.sol
contract type { }
// ----
// ParserError 2314: (9-13): Expected identifier but got 'type'
